# quick-proj

./: .cursorrules  .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  clippy.toml
.github/workflows/: ci.yml  release.yml
docs/: RELEASE.md
src/: cli.rs  config.rs  launcher.rs  main.rs  scanner.rs  ui.rs
